--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <nav>
-        <a href="http://127.0.0.4:8080/courses"> get courses</a>
-        <a href="delete.html"> get courses</a>
+        <a href="http://127.0.0.4:8080/courses"> get courses</a><br>
+        <a href="addCourse.html"> add course </a><br>
+        <a href="delete.html"> delete course </a><br>
+        <a href="replace.html"> replace course </a><br>
     </nav>
 
     
