--- a/addCourse.html
+++ b/addCourse.html
@@ -8,6 +8,7 @@
 <body>
     <nav>
         <a href="http://127.0.0.4:8080/courses"> get courses</a>
+        <a href="http://127.0.0.4:8080/courses"> get courses</a>
     </nav>
 
     <form action="http://127.0.0.4:8080/add" method="post">
